grammar.output
   0  $accept : %entry% $end

   1  program : exp EOF

   2  exp : NIL
   3      | LPAREN expseq RPAREN
   4      | ID LPAREN funcexpseq RPAREN
   5      | ID LPAREN RPAREN
   6      | arith
   7      | comp
   8      | bool
   9      | ID LBRACE idexpseq RBRACE
  10      | ID LBRACE RBRACE
  11      | ID LBRACK exp RBRACK OF exp
  12      | IF exp THEN exp ELSE exp
  13      | IF exp THEN exp
  14      | WHILE exp DO exp
  15      | FOR ID ASSIGN exp TO exp DO exp
  16      | BREAK
  17      | LET decs IN expseq END
  18      | INT
  19      | STRING
  20      | lvalue
  21      | stmt
  22      | LPAREN RPAREN

  23  stmt : lvalue ASSIGN exp

  24  funcexpseq : exp
  25             | exp COMMA funcexpseq

  26  idexpseq : ID EQ exp
  27           | ID EQ exp COMMA idexpseq

  28  arith : exp PLUS exp
  29        | exp MINUS exp
  30        | exp TIMES exp
  31        | exp DIVIDE exp
  32        | MINUS exp

  33  comp : exp EQ exp
  34       | exp LE exp
  35       | exp GE exp
  36       | exp GT exp
  37       | exp LT exp
  38       | exp NEQ exp

  39  bool : exp AND exp
  40       | exp OR exp

  41  expseq : exp
  42         | exp SEMICOLON expseq

  43  decs : tydecs not_tydecs
  44       | vardec decs
  45       | fundecs not_fundecs
  46       |

  47  not_fundecs : tydecs not_tydecs
  48              | vardec decs
  49              |

  50  not_tydecs : fundecs not_fundecs
  51             | vardec decs
  52             |

  53  dec : tydecs
  54      | vardec
  55      | fundecs

  56  tydecs : tydec tydecs
  57         | tydec

  58  tydec : TYPE type_id EQ ty

  59  ty : type_id
  60     | LBRACE tyfields RBRACE
  61     | ARRAY OF type_id

  62  tyfields : ID COLON type_id
  63           | ID COLON type_id COMMA tyfields
  64           |

  65  vardec : VAR ID ASSIGN exp
  66         | VAR ID COLON type_id ASSIGN exp

  67  fundecs : fundec fundecs
  68          | fundec

  69  fundec : FUNCTION ID LPAREN tyfields RPAREN EQ exp
  70         | FUNCTION ID LPAREN tyfields RPAREN COLON type_id EQ exp

  71  lvalue : ID
  72         | lvalue DOT ID
  73         | lvalue LBRACK exp RBRACK
  74         | ID LBRACK exp RBRACK

  75  type_id : ID

  76  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (76)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	program  goto 14
	exp  goto 15
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 2
	$accept : %entry% . $end  (0)

	$end  accept


3: shift/reduce conflict (shift 22, reduce 71) on LBRACK
state 3
	exp : ID . LPAREN funcexpseq RPAREN  (4)
	exp : ID . LPAREN RPAREN  (5)
	exp : ID . LBRACE idexpseq RBRACE  (9)
	exp : ID . LBRACE RBRACE  (10)
	exp : ID . LBRACK exp RBRACK OF exp  (11)
	lvalue : ID .  (71)
	lvalue : ID . LBRACK exp RBRACK  (74)

	LPAREN  shift 21
	LBRACK  shift 22
	LBRACE  shift 23
	EOF  reduce 71
	COMMA  reduce 71
	SEMICOLON  reduce 71
	RPAREN  reduce 71
	RBRACK  reduce 71
	RBRACE  reduce 71
	DOT  reduce 71
	PLUS  reduce 71
	MINUS  reduce 71
	TIMES  reduce 71
	DIVIDE  reduce 71
	EQ  reduce 71
	NEQ  reduce 71
	LT  reduce 71
	LE  reduce 71
	GT  reduce 71
	GE  reduce 71
	AND  reduce 71
	OR  reduce 71
	ASSIGN  reduce 71
	THEN  reduce 71
	ELSE  reduce 71
	TO  reduce 71
	DO  reduce 71
	IN  reduce 71
	END  reduce 71
	FUNCTION  reduce 71
	VAR  reduce 71
	TYPE  reduce 71


state 4
	exp : INT .  (18)

	.  reduce 18


state 5
	exp : STRING .  (19)

	.  reduce 19


state 6
	exp : LPAREN . expseq RPAREN  (3)
	exp : LPAREN . RPAREN  (22)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	RPAREN  shift 24
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 25
	expseq  goto 26
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 7
	arith : MINUS . exp  (32)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 27
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 8
	exp : IF . exp THEN exp ELSE exp  (12)
	exp : IF . exp THEN exp  (13)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 28
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 9
	exp : WHILE . exp DO exp  (14)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 29
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 10
	exp : FOR . ID ASSIGN exp TO exp DO exp  (15)

	ID  shift 30
	.  error


state 11
	exp : LET . decs IN expseq END  (17)
	decs : .  (46)

	FUNCTION  shift 31
	VAR  shift 32
	TYPE  shift 33
	IN  reduce 46

	decs  goto 34
	tydecs  goto 35
	vardec  goto 36
	fundecs  goto 37
	tydec  goto 38
	fundec  goto 39


state 12
	exp : BREAK .  (16)

	.  reduce 16


state 13
	exp : NIL .  (2)

	.  reduce 2


state 14
	%entry% : '\001' program .  (76)

	.  reduce 76


state 15
	program : exp . EOF  (1)
	arith : exp . PLUS exp  (28)
	arith : exp . MINUS exp  (29)
	arith : exp . TIMES exp  (30)
	arith : exp . DIVIDE exp  (31)
	comp : exp . EQ exp  (33)
	comp : exp . LE exp  (34)
	comp : exp . GE exp  (35)
	comp : exp . GT exp  (36)
	comp : exp . LT exp  (37)
	comp : exp . NEQ exp  (38)
	bool : exp . AND exp  (39)
	bool : exp . OR exp  (40)

	EOF  shift 40
	PLUS  shift 41
	MINUS  shift 42
	TIMES  shift 43
	DIVIDE  shift 44
	EQ  shift 45
	NEQ  shift 46
	LT  shift 47
	LE  shift 48
	GT  shift 49
	GE  shift 50
	AND  shift 51
	OR  shift 52
	.  error


state 16
	exp : arith .  (6)

	.  reduce 6


state 17
	exp : comp .  (7)

	.  reduce 7


state 18
	exp : bool .  (8)

	.  reduce 8


state 19
	exp : lvalue .  (20)
	stmt : lvalue . ASSIGN exp  (23)
	lvalue : lvalue . DOT ID  (72)
	lvalue : lvalue . LBRACK exp RBRACK  (73)

	LBRACK  shift 53
	DOT  shift 54
	ASSIGN  shift 55
	EOF  reduce 20
	COMMA  reduce 20
	SEMICOLON  reduce 20
	RPAREN  reduce 20
	RBRACK  reduce 20
	RBRACE  reduce 20
	PLUS  reduce 20
	MINUS  reduce 20
	TIMES  reduce 20
	DIVIDE  reduce 20
	EQ  reduce 20
	NEQ  reduce 20
	LT  reduce 20
	LE  reduce 20
	GT  reduce 20
	GE  reduce 20
	AND  reduce 20
	OR  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	TO  reduce 20
	DO  reduce 20
	IN  reduce 20
	END  reduce 20
	FUNCTION  reduce 20
	VAR  reduce 20
	TYPE  reduce 20


state 20
	exp : stmt .  (21)

	.  reduce 21


state 21
	exp : ID LPAREN . funcexpseq RPAREN  (4)
	exp : ID LPAREN . RPAREN  (5)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	RPAREN  shift 56
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 57
	funcexpseq  goto 58
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 22
	exp : ID LBRACK . exp RBRACK OF exp  (11)
	lvalue : ID LBRACK . exp RBRACK  (74)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 59
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 23
	exp : ID LBRACE . idexpseq RBRACE  (9)
	exp : ID LBRACE . RBRACE  (10)

	ID  shift 60
	RBRACE  shift 61
	.  error

	idexpseq  goto 62


state 24
	exp : LPAREN RPAREN .  (22)

	.  reduce 22


state 25
	arith : exp . PLUS exp  (28)
	arith : exp . MINUS exp  (29)
	arith : exp . TIMES exp  (30)
	arith : exp . DIVIDE exp  (31)
	comp : exp . EQ exp  (33)
	comp : exp . LE exp  (34)
	comp : exp . GE exp  (35)
	comp : exp . GT exp  (36)
	comp : exp . LT exp  (37)
	comp : exp . NEQ exp  (38)
	bool : exp . AND exp  (39)
	bool : exp . OR exp  (40)
	expseq : exp .  (41)
	expseq : exp . SEMICOLON expseq  (42)

	SEMICOLON  shift 63
	PLUS  shift 41
	MINUS  shift 42
	TIMES  shift 43
	DIVIDE  shift 44
	EQ  shift 45
	NEQ  shift 46
	LT  shift 47
	LE  shift 48
	GT  shift 49
	GE  shift 50
	AND  shift 51
	OR  shift 52
	RPAREN  reduce 41
	END  reduce 41


state 26
	exp : LPAREN expseq . RPAREN  (3)

	RPAREN  shift 64
	.  error


state 27
	arith : exp . PLUS exp  (28)
	arith : exp . MINUS exp  (29)
	arith : exp . TIMES exp  (30)
	arith : exp . DIVIDE exp  (31)
	arith : MINUS exp .  (32)
	comp : exp . EQ exp  (33)
	comp : exp . LE exp  (34)
	comp : exp . GE exp  (35)
	comp : exp . GT exp  (36)
	comp : exp . LT exp  (37)
	comp : exp . NEQ exp  (38)
	bool : exp . AND exp  (39)
	bool : exp . OR exp  (40)

	.  reduce 32


state 28
	exp : IF exp . THEN exp ELSE exp  (12)
	exp : IF exp . THEN exp  (13)
	arith : exp . PLUS exp  (28)
	arith : exp . MINUS exp  (29)
	arith : exp . TIMES exp  (30)
	arith : exp . DIVIDE exp  (31)
	comp : exp . EQ exp  (33)
	comp : exp . LE exp  (34)
	comp : exp . GE exp  (35)
	comp : exp . GT exp  (36)
	comp : exp . LT exp  (37)
	comp : exp . NEQ exp  (38)
	bool : exp . AND exp  (39)
	bool : exp . OR exp  (40)

	PLUS  shift 41
	MINUS  shift 42
	TIMES  shift 43
	DIVIDE  shift 44
	EQ  shift 45
	NEQ  shift 46
	LT  shift 47
	LE  shift 48
	GT  shift 49
	GE  shift 50
	AND  shift 51
	OR  shift 52
	THEN  shift 65
	.  error


state 29
	exp : WHILE exp . DO exp  (14)
	arith : exp . PLUS exp  (28)
	arith : exp . MINUS exp  (29)
	arith : exp . TIMES exp  (30)
	arith : exp . DIVIDE exp  (31)
	comp : exp . EQ exp  (33)
	comp : exp . LE exp  (34)
	comp : exp . GE exp  (35)
	comp : exp . GT exp  (36)
	comp : exp . LT exp  (37)
	comp : exp . NEQ exp  (38)
	bool : exp . AND exp  (39)
	bool : exp . OR exp  (40)

	PLUS  shift 41
	MINUS  shift 42
	TIMES  shift 43
	DIVIDE  shift 44
	EQ  shift 45
	NEQ  shift 46
	LT  shift 47
	LE  shift 48
	GT  shift 49
	GE  shift 50
	AND  shift 51
	OR  shift 52
	DO  shift 66
	.  error


state 30
	exp : FOR ID . ASSIGN exp TO exp DO exp  (15)

	ASSIGN  shift 67
	.  error


state 31
	fundec : FUNCTION . ID LPAREN tyfields RPAREN EQ exp  (69)
	fundec : FUNCTION . ID LPAREN tyfields RPAREN COLON type_id EQ exp  (70)

	ID  shift 68
	.  error


state 32
	vardec : VAR . ID ASSIGN exp  (65)
	vardec : VAR . ID COLON type_id ASSIGN exp  (66)

	ID  shift 69
	.  error


state 33
	tydec : TYPE . type_id EQ ty  (58)

	ID  shift 70
	.  error

	type_id  goto 71


state 34
	exp : LET decs . IN expseq END  (17)

	IN  shift 72
	.  error


state 35
	decs : tydecs . not_tydecs  (43)
	not_tydecs : .  (52)

	FUNCTION  shift 31
	VAR  shift 32
	IN  reduce 52

	not_tydecs  goto 73
	vardec  goto 74
	fundecs  goto 75
	fundec  goto 39


state 36
	decs : vardec . decs  (44)
	decs : .  (46)

	FUNCTION  shift 31
	VAR  shift 32
	TYPE  shift 33
	IN  reduce 46

	decs  goto 76
	tydecs  goto 35
	vardec  goto 36
	fundecs  goto 37
	tydec  goto 38
	fundec  goto 39


state 37
	decs : fundecs . not_fundecs  (45)
	not_fundecs : .  (49)

	VAR  shift 32
	TYPE  shift 33
	IN  reduce 49

	tydecs  goto 77
	vardec  goto 78
	not_fundecs  goto 79
	tydec  goto 38


state 38
	tydecs : tydec . tydecs  (56)
	tydecs : tydec .  (57)

	TYPE  shift 33
	IN  reduce 57
	FUNCTION  reduce 57
	VAR  reduce 57

	tydecs  goto 80
	tydec  goto 38


state 39
	fundecs : fundec . fundecs  (67)
	fundecs : fundec .  (68)

	FUNCTION  shift 31
	IN  reduce 68
	VAR  reduce 68
	TYPE  reduce 68

	fundecs  goto 81
	fundec  goto 39


state 40
	program : exp EOF .  (1)

	.  reduce 1


state 41
	arith : exp PLUS . exp  (28)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 82
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 42
	arith : exp MINUS . exp  (29)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 83
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 43
	arith : exp TIMES . exp  (30)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 84
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 44
	arith : exp DIVIDE . exp  (31)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 85
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 45
	comp : exp EQ . exp  (33)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 86
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 46
	comp : exp NEQ . exp  (38)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 87
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 47
	comp : exp LT . exp  (37)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 88
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 48
	comp : exp LE . exp  (34)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 89
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 49
	comp : exp GT . exp  (36)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 90
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 50
	comp : exp GE . exp  (35)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 91
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 51
	bool : exp AND . exp  (39)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 92
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 52
	bool : exp OR . exp  (40)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 93
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 53
	lvalue : lvalue LBRACK . exp RBRACK  (73)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 94
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 54
	lvalue : lvalue DOT . ID  (72)

	ID  shift 95
	.  error


state 55
	stmt : lvalue ASSIGN . exp  (23)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 96
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 56
	exp : ID LPAREN RPAREN .  (5)

	.  reduce 5


state 57
	funcexpseq : exp .  (24)
	funcexpseq : exp . COMMA funcexpseq  (25)
	arith : exp . PLUS exp  (28)
	arith : exp . MINUS exp  (29)
	arith : exp . TIMES exp  (30)
	arith : exp . DIVIDE exp  (31)
	comp : exp . EQ exp  (33)
	comp : exp . LE exp  (34)
	comp : exp . GE exp  (35)
	comp : exp . GT exp  (36)
	comp : exp . LT exp  (37)
	comp : exp . NEQ exp  (38)
	bool : exp . AND exp  (39)
	bool : exp . OR exp  (40)

	COMMA  shift 97
	PLUS  shift 41
	MINUS  shift 42
	TIMES  shift 43
	DIVIDE  shift 44
	EQ  shift 45
	NEQ  shift 46
	LT  shift 47
	LE  shift 48
	GT  shift 49
	GE  shift 50
	AND  shift 51
	OR  shift 52
	RPAREN  reduce 24


state 58
	exp : ID LPAREN funcexpseq . RPAREN  (4)

	RPAREN  shift 98
	.  error


state 59
	exp : ID LBRACK exp . RBRACK OF exp  (11)
	arith : exp . PLUS exp  (28)
	arith : exp . MINUS exp  (29)
	arith : exp . TIMES exp  (30)
	arith : exp . DIVIDE exp  (31)
	comp : exp . EQ exp  (33)
	comp : exp . LE exp  (34)
	comp : exp . GE exp  (35)
	comp : exp . GT exp  (36)
	comp : exp . LT exp  (37)
	comp : exp . NEQ exp  (38)
	bool : exp . AND exp  (39)
	bool : exp . OR exp  (40)
	lvalue : ID LBRACK exp . RBRACK  (74)

	RBRACK  shift 99
	PLUS  shift 41
	MINUS  shift 42
	TIMES  shift 43
	DIVIDE  shift 44
	EQ  shift 45
	NEQ  shift 46
	LT  shift 47
	LE  shift 48
	GT  shift 49
	GE  shift 50
	AND  shift 51
	OR  shift 52
	.  error


state 60
	idexpseq : ID . EQ exp  (26)
	idexpseq : ID . EQ exp COMMA idexpseq  (27)

	EQ  shift 100
	.  error


state 61
	exp : ID LBRACE RBRACE .  (10)

	.  reduce 10


state 62
	exp : ID LBRACE idexpseq . RBRACE  (9)

	RBRACE  shift 101
	.  error


state 63
	expseq : exp SEMICOLON . expseq  (42)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 25
	expseq  goto 102
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 64
	exp : LPAREN expseq RPAREN .  (3)

	.  reduce 3

